kv-store/proc-macros/build_fail_tests/binary_static_env/require_binary_static_env/too_many_args.stderr
error: Expected at most 2 arguments, got 3.
 --> $DIR/too_many_args.rs:5:29
  |
5 | #[require_binary_static_env(E, crate, X)]
  |                             ^^^^^^^^^^^
